--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     		</div>
 		</div>	
 		<div class="botan2">
-        	<a href="#">
+        	<a href="work1.html">
 				<img src="site-assets/work_buttom.png">
             </a>
     	</div>
